--- a/AmbiArduLight/MainWindow.xaml
+++ b/AmbiArduLight/MainWindow.xaml
@@ -34,6 +34,7 @@
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
 
                 <!--<Rectangle Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="6" Fill="#414042" />-->
@@ -43,19 +44,25 @@
                     </Rectangle.Effect>
                 </Rectangle>
 
-                <Rectangle Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="2" Fill="#00a47f">
+                <Rectangle Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="1" Fill="#70e500">
                     <Rectangle.Effect>
                         <DropShadowEffect Direction="90" BlurRadius="1" ShadowDepth="3" Opacity="0.5" RenderingBias="Quality"/>
                     </Rectangle.Effect>
                 </Rectangle>
 
-                <Rectangle Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="1" Fill="#ff6200" >
+                <Rectangle Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="2" Fill="#00a47f">
+                    <Rectangle.Effect>
+                        <DropShadowEffect Direction="90" BlurRadius="1" ShadowDepth="3" Opacity="0.5" RenderingBias="Quality"/>
+                    </Rectangle.Effect>
+                </Rectangle>
+
+                <Rectangle Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="1" Fill="#ff6200" >
                     <Rectangle.Effect>
                         <DropShadowEffect Direction="90" BlurRadius="1" ShadowDepth="3" Opacity="0.5" RenderingBias="Quality"/>
                     </Rectangle.Effect>
                 </Rectangle>
                 
-                <Rectangle Grid.Row="0" Grid.RowSpan="6" Fill="#353535" >
+                <Rectangle Grid.Row="0" Grid.RowSpan="7" Fill="#353535" >
                     <Rectangle.Effect>
                         <DropShadowEffect Direction="0" BlurRadius="1" ShadowDepth="4" Opacity="0.5" RenderingBias="Quality"/>
                     </Rectangle.Effect>
@@ -71,19 +78,30 @@
                     <RadioButton x:Name="radio_button5" VerticalAlignment="Center" Margin="6,2" Checked="RadioButton_Changed">COM5</RadioButton>
                     <RadioButton x:Name="radio_button6" VerticalAlignment="Center" Margin="6,2" Checked="RadioButton_Changed">COM6</RadioButton>
                 </StackPanel>
+                <Label TextBlock.Foreground="#9d9d9d" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,2,0">Points</Label>
+                <StackPanel Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="4" Orientation="Horizontal" >
+                    <Label VerticalAlignment="Center" Margin="4,0,0,0">Top: </Label>
+                    <TextBox Width="40" Margin="0,8,0,8"/>
+                    <Label VerticalAlignment="Center">Bottom: </Label>
+                    <TextBox Width="40" Margin="0,8,0,8"/>
+                    <Label VerticalAlignment="Center">Left: </Label>
+                    <TextBox Width="40" Margin="0,8,0,8"/>
+                    <Label VerticalAlignment="Center">Right: </Label>
+                    <TextBox Width="40" Margin="0,8,0,8"/>
+                </StackPanel>
+                
+                <Label TextBlock.Foreground="#9d9d9d" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,2,0">Top Pixels</Label>
+                <TextBlock Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="4" Name="text_top" VerticalAlignment="Center" Margin="2,0,0,0" Padding="6,0,0,0"></TextBlock>
 
-                <Label TextBlock.Foreground="#9d9d9d" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,2,0">Top Pixels</Label>
-                <TextBlock Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="4" Name="text_top" VerticalAlignment="Center" Margin="2,0,0,0" Padding="6,0,0,0"></TextBlock>
+                <Label TextBlock.Foreground="#9d9d9d" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,2,0">Bottom Pixels</Label>
+                <TextBlock Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="4" Name="text_bottom" VerticalAlignment="Center" Margin="2,0,0,0" Padding="6,0,0,0"></TextBlock>
 
-                <Label TextBlock.Foreground="#9d9d9d" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,2,0">Bottom Pixels</Label>
-                <TextBlock Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="4" Name="text_bottom" VerticalAlignment="Center" Margin="2,0,0,0" Padding="6,0,0,0"></TextBlock>
+                <Label TextBlock.Foreground="#9d9d9d" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,2,0">State</Label>
+                <TextBlock Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="4" Name="text_state" VerticalAlignment="Center" Margin="2,0,0,0" Padding="6,0,0,0"></TextBlock>
 
-                <Label TextBlock.Foreground="#9d9d9d" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,2,0">State</Label>
-                <TextBlock Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="4" Name="text_state" VerticalAlignment="Center" Margin="2,0,0,0" Padding="6,0,0,0"></TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="4" Grid.RowSpan="2" Name="text_error" VerticalAlignment="Top" Margin="4,6,0,4" Padding="6,0,0,0"></TextBlock>
 
-                <TextBlock Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="4" Grid.RowSpan="2" Name="text_error" VerticalAlignment="Top" Margin="4,6,0,4" Padding="6,0,0,0"></TextBlock>
-
-                <Button Background="#9d9d9d" Grid.Column="0" Grid.Row="4" Margin="4" MinWidth="80" MinHeight="30" Click="Button_Click" Name="Start">
+                <Button Background="#9d9d9d" Grid.Column="0" Grid.Row="5" Margin="4" MinWidth="80" MinHeight="30" Click="Button_Click" Name="Start">
                     <Button.Effect>
                         <DropShadowEffect ShadowDepth="3"/>
                     </Button.Effect>
