--- a/AmbiArduLight/MainWindow.xaml
+++ b/AmbiArduLight/MainWindow.xaml
@@ -17,7 +17,7 @@
             <DockPanel x:Name="Title"  Margin="2" DockPanel.Dock="Top" MouseDown="Title_MouseDown">
                 <Button x:Name="CloseButton" Background="#9d9d9d" Width="20" DockPanel.Dock="Right" Click="CloseButton_Click" >X</Button>
                 <Button x:Name="MinimizeButton" Background="#9d9d9d" Width="20" DockPanel.Dock="Right" Click="MinimizeButton_Click" >_</Button>
-                <Label VerticalAlignment="Center" DockPanel.Dock="Top" Padding="190,0,5,0">AmbiArduinoLight</Label>
+                <Label TextBlock.Foreground="#9d9d9d" VerticalAlignment="Center" DockPanel.Dock="Top" Padding="190,0,5,0">AmbiArduinoLight</Label>
             </DockPanel>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -80,14 +80,14 @@
                 </StackPanel>
                 <Label TextBlock.Foreground="#9d9d9d" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,2,0">Points</Label>
                 <StackPanel Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="4" Orientation="Horizontal" >
-                    <Label VerticalAlignment="Center" Margin="4,0,0,0">Top: </Label>
-                    <TextBox Width="40" Margin="0,8,0,8"/>
-                    <Label VerticalAlignment="Center">Bottom: </Label>
-                    <TextBox Width="40" Margin="0,8,0,8"/>
-                    <Label VerticalAlignment="Center">Left: </Label>
-                    <TextBox Width="40" Margin="0,8,0,8"/>
+                    <Label VerticalAlignment="Center" Margin="4,0,0,0">Left: </Label>
+                    <TextBox x:Name="points_left" Width="40" Margin="0,8,0,8" Text="5"/>
+                    <Label VerticalAlignment="Center">Top: </Label>
+                    <TextBox x:Name="points_top" Width="40" Margin="0,8,0,8" Text="5"/>
                     <Label VerticalAlignment="Center">Right: </Label>
-                    <TextBox Width="40" Margin="0,8,0,8"/>
+                    <TextBox x:Name="points_right" Width="40" Margin="0,8,0,8" Text="5"/>
+                    <Label VerticalAlignment="Center">Bottom: </Label>
+                    <TextBox x:Name="points_bottom" Width="40" Margin="0,8,0,8" Text="5"/>
                 </StackPanel>
                 
                 <Label TextBlock.Foreground="#9d9d9d" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,2,0">Top Pixels</Label>
